# newsapi-demo

./: Cargo.toml  flake.nix  readme.md
src/: main.rs
src/newsapi/: article.rs  mod.rs  response.rs  source.rs
src/ui/: article.rs  main_page.rs  mod.rs  source.rs  style.rs  token_page.rs
