[package]
name = "newsapi"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13.1", features = ["wgpu", "tokio"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
