[package]
name = "newsapi"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
iced = { version = "0.13.1", features = ["wgpu", "tokio", "image", "advanced"] }
image = "0.25.8"
open = "5.3.2"
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread"] }
